@@ -44,7 +44,6 @@
         "NetBSD",
         "FreeBSD",
         "kFreeBSD/GNU",
-        "BlueGene/Q",
         "AIX",
         "Solaris",
         "HP-UX"
