@@ -3,7 +3,7 @@
 
 /* -*- c -*-
  *
- * Copyright © 2009-2021 Inria.  All rights reserved.
+ * Copyright © 2009-2022 Inria.  All rights reserved.
  * Copyright © 2009-2014 Cisco Systems, Inc.  All rights reserved.
  * $COPYRIGHT$
  *
@@ -394,9 +394,6 @@
 
 /* Define to 1 on AIX */
 /* #undef HWLOC_AIX_SYS */
-
-/* Define to 1 on BlueGene/Q */
-/* #undef HWLOC_BGQ_SYS */
 
 /* Whether C compiler supports symbol visibility or not */
 #define HWLOC_C_HAVE_VISIBILITY 1
