@@ -1,13 +1,0 @@
-/*
- * Copyright © 2013 Inria.  All rights reserved.
- * See COPYING in top-level directory.
- */
-
-#ifndef HWLOC_PORT_BGQ_KERNEL_PROCESS_H
-#define HWLOC_PORT_BGQ_KERNEL_PROCESS_H
-
-#include <stdint.h>
-
-uint64_t Kernel_ThreadMask(uint32_t t);
-
-#endif /* HWLOC_PORT_BGQ_KERNEL_PROCESS_H */
